# forsa-dev

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: ActionButtons.jsx  AgentButtons.jsx  CollapsibleSection.jsx  ConfirmModal.jsx  CreateEnvironment.jsx  EnvironmentCard.jsx  EnvironmentRow.jsx  EnvironmentTable.jsx  ErrorBanner.jsx  ErrorToast.jsx  HealthBar.jsx  HealthPanel.jsx  ImportBranch.jsx  LogsView.jsx  StatusBadge.jsx  TerminalView.jsx  UserInitials.jsx  UserPicker.jsx  VirtualKeyboard.jsx  WorkspaceCard.jsx
dashboard/src/hooks/: useDeleteConfirmation.js  useInterval.js
dashboard/src/styles/: theme.css
docs/: review-init-branch.md
docs/plans/: 2026-03-07-dashboard-design.md  2026-03-07-dashboard.md  2026-03-07-forsa-dev-cli-design.md  2026-03-07-forsa-dev-cli-implementation.md  2026-03-08-dashboard-v2.md  2026-03-08-import-branch-design.md  2026-03-08-import-branch.md
scripts/: build_dashboard.sh
src/forsa_dev/: agents.py  caddy.py  cli.py  compose.py  config.py  git.py  list_status.py  operations.py  ports.py  state.py  tmux.py  ttyd.py
tests/: conftest.py  test_agents.py  test_caddy.py  test_cli_dashboard.py  test_cli_down.py  test_cli_init.py  test_cli_list.py  test_cli_passthrough.py  test_cli_run.py  test_cli_serve_stop.py  test_cli_up.py  test_compose.py  test_config.py  test_dashboard_server.py  test_git.py  test_operations.py  test_ports.py  test_state.py  test_tmux.py  test_ttyd.py
(+61 files in other folders)
